fixed flickering of order update modal

--- a/src/OrderUpdate.css
+++ b/src/OrderUpdate.css
@@ -5,6 +5,12 @@
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
 
+.comments {
+  margin: auto !important;
+  min-width: 800px !important;
+}
+
+
 .card .description {
   font-size: 24px;
   font-weight: bolder;
